@@ -5,7 +5,7 @@ import com.webjob.application.dto.Request.PaymentSuccessDto;
 import com.webjob.application.dto.Response.RespondEmailJob;
 import com.webjob.application.messaging.dto.JobAppliedEvent;
 import com.webjob.application.models.Entity.*;
-import com.webjob.application.utils.UtilFormat;
+import com.webjob.application.utils.common.UtilFormat;
 import eu.bitwalker.useragentutils.DeviceType;
 import eu.bitwalker.useragentutils.UserAgent;
 import lombok.RequiredArgsConstructor;
@@ -30,35 +30,73 @@ public class ApplicationEmailService {
     private final EmailService emailService;
 
 
-//    @Async("taskExecutor")
+    //    @Async("taskExecutor")
     public void sendJobApplicate(JobAppliedEvent event) {
 
         Map<String, Object> emailVars = new HashMap<>();
-        emailVars.put("email", event.getEmail());
-        emailVars.put("username",event.getUsername());
-        emailVars.put("usernameHR",event.getUsernameHR());
-        emailVars.put("namecompany",event.getCompanyName());
-        emailVars.put("nameJob", event.getJobName());
-        emailVars.put("logo",event.getCompanyLogo());
-        http://localhost:8081/storage/company/
-        emailVars.put("salary", formatVietnameseCurrency(event.getSalary().doubleValue()));
-        emailVars.put("location",event.getLocation());
 
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy")
+        // Candidate
+        emailVars.put("email", event.getEmail());
+        emailVars.put("candidateName", event.getCandidateName());
+
+        // Company
+        emailVars.put("companyName", event.getCompanyName());
+        emailVars.put("companyLogo", event.getCompanyLogo());
+        emailVars.put("hrName", event.getHrName());
+
+        // Job
+        emailVars.put("jobName", event.getJobName());
+        emailVars.put("location", event.getLocation());
+
+        // Salary
+        String salaryText;
+
+        if (event.isNegotiable()) {
+            salaryText = "Thỏa thuận";
+        } else {
+            salaryText = formatSalary(
+                    event.getSalaryMin(),
+                    event.getSalaryMax()
+            );
+        }
+
+        emailVars.put("salary", salaryText);
+
+
+        // Working information
+        emailVars.put("workingType", event.getWorkingType());
+        emailVars.put("workMode", event.getWorkMode());
+        emailVars.put("level", event.getLevel());
+
+
+        // Date
+        DateTimeFormatter formatter = DateTimeFormatter
+                .ofPattern("dd/MM/yyyy")
                 .withZone(ZoneId.of("Asia/Ho_Chi_Minh"));
-        String startDateFormatted = formatter.format(event.getStartDate());
-        String endDateFormatted = formatter.format(event.getEndDate());
-        emailVars.put("starttime", startDateFormatted);
-        emailVars.put("endtime", endDateFormatted);
+
+        emailVars.put(
+                "startDate",
+                formatter.format(event.getStartDate())
+        );
+
+        emailVars.put(
+                "endDate",
+                formatter.format(event.getEndDate())
+        );
+        emailVars.put(
+                "appliedAt",
+                formatter.format(event.getAppliedAt())
+        );
+
 
         emailService.sendTemplateJobapply(
                 "Thông tin Job vừa ứng tuyển",
                 "emails/emailjob-apply",
                 emailVars
         );
-        log.info("Sent job email to {}", event.getEmail());
-    }
 
+        log.info("Sent job application email to {}", event.getEmail());
+    }
 
 
     @Async("taskExecutor")
@@ -90,24 +128,26 @@ public class ApplicationEmailService {
                 .filter(Objects::nonNull)          // loại bỏ các kết quả null
                 .collect(Collectors.toList());      // Java 8
 
-            emailService.sendTemplateEmail(
-                    subscriber.getEmail(),
-                    "Cơ hội việc làm hot đang chờ bạn!",
-                    "emails/job",
-                    subscriber.getName(),
-                    jobSummaries
-            );
-            log.info("Sent job email to {}", subscriber.getEmail());
+        String email = subscriber.getUser().getEmail();
+        emailService.sendTemplateEmail(
+                email,
+                "Cơ hội việc làm hot đang chờ bạn!",
+                "emails/job",
+                subscriber.getName(),
+                jobSummaries
+        );
+        log.info("Sent job email to {}", email);
 
     }
+
     public void sendResetPasswordEmail(String email, String fullName, String token, Instant expiresAt) {
         // Tạo link reset
-        String resetLink = "https://webjob-client.com/reset-password?token=" + token;
+        String resetLink = "http://localhost:8081/reset-password";
 
         // Chuẩn bị biến truyền vào email template
         Map<String, Object> emailVars = new HashMap<>();
-        emailVars.put("name",fullName);
-        emailVars.put("username",email);
+        emailVars.put("name", fullName);
+        emailVars.put("username", email);
         emailVars.put("resetLink", resetLink);
         emailVars.put("token", token);
 
@@ -137,23 +177,45 @@ public class ApplicationEmailService {
         }
         String companyName = job.getCompany() != null ? job.getCompany().getName() : "Unknown";
 
-        List<RespondEmailJob.SkillEmail> skillEmails = Optional.ofNullable(job.getSkills())
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(skill -> new RespondEmailJob.SkillEmail(skill.getName()))
-                .collect(Collectors.toList());
+        List<RespondEmailJob.SkillEmail> skillEmails = new ArrayList<>();
+        if (job.getJobSkills() != null) {
+            skillEmails = job.getJobSkills().stream()
+                    .map(JobSkill::getSkill)
+                    .filter(Objects::nonNull)
+                    .map(skill -> new RespondEmailJob.SkillEmail(skill.getName()))
+                    .toList();
+        }
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy")
                 .withZone(ZoneId.of("Asia/Ho_Chi_Minh"));
-        RespondEmailJob response = RespondEmailJob.builder()
+        String formattedSalary = job.isNegotiable() ? "Thỏa thuận" : String.format("%,.0f - %,.0f VNĐ",
+                job.getSalaryMin(),
+                job.getSalaryMax());
+
+        RespondEmailJob respond = RespondEmailJob.builder()
                 .name(job.getName())
-                .formattedSalary(formatVietnameseCurrency(job.getSalary()))
-                .company(new RespondEmailJob.CompanyEmail(companyName))
+                .company(RespondEmailJob.CompanyEmail.builder()
+                        .name(companyName).build())
+                .category(job.getJobCategory() != null ? job.getJobCategory().getName() : null)
                 .skills(skillEmails)
+                .description(job.getDescription())
+                .location(job.getLocation())
+                .level(job.getLevel().name())
+                .quantity(job.getQuantity())
+                .experienceRequired(job.getExperienceRequired())
+                .workingType(job.getWorkingType() != null ? job.getWorkingType().name() : null)
+                .workMode(job.getWorkMode() != null ? job.getWorkMode().name() : null)
+                .competitionLevel(job.getCompetitionLevel() != null ? job.getCompetitionLevel().name() : null)
+                .benefits(job.getBenefits())
+                .formattedSalary(formattedSalary)
+                .requirement(job.getRequirement())
+                .responsibility(job.getResponsibility())
                 .startDate(formatter.format(job.getStartDate()))
                 .endDate(formatter.format(job.getEndDate()))
                 .build();
-        return response;
+
+        return respond;
     }
+
     public String getLocationByIp(String ip) {
 
         // IP local / private → không gọi API
@@ -204,22 +266,23 @@ public class ApplicationEmailService {
 
         return deviceTypeVN + " - " + os + " - " + browser;
     }
+
     @Async("taskExecutor")
     public void sendPaymentEmail(Payment payment) {
         Map<String, Object> vars = new HashMap<>();
-        vars.put("email",payment.getUser().getEmail()); // cần có
-        vars.put("userName",payment.getUser().getFullName());
+        vars.put("email", payment.getUser().getEmail()); // cần có
+        vars.put("userName", payment.getUser().getFullName());
         vars.put("jobName", payment.getJob().getName());
         vars.put("amount", UtilFormat.formatAmount(payment.getAmount()));
         vars.put("status", payment.getStatus());
-        vars.put("transactionId",payment.getTransactionId());
-        vars.put("payDate",UtilFormat.formatTime(payment.getPayDate()));
+        vars.put("transactionId", payment.getTransactionId());
+        vars.put("payDate", UtilFormat.formatTime(payment.getPayDate()));
         vars.put("gateway", payment.getProvider());
         vars.put("bankCode", payment.getBankCode());
-        vars.put("responseCode",payment.getResponseCode());
-        vars.put("orderInfo",payment.getOrderInfo());
-        vars.put("payType",payment.getPayType());
-        vars.put("orderType",payment.getOrderType());
+        vars.put("responseCode", payment.getResponseCode());
+        vars.put("orderInfo", payment.getOrderInfo());
+        vars.put("payType", payment.getPayType());
+        vars.put("orderType", payment.getOrderType());
 
         emailService.sendPaymentNotification(
                 "Xác Nhận Thanh Toán WebJob",
@@ -229,23 +292,24 @@ public class ApplicationEmailService {
 
 
     }
+
     @Async("taskExecutor")
-    public void sendMomoPaymentEmail(PaymentSuccessDto dto ) {
+    public void sendMomoPaymentEmail(PaymentSuccessDto dto) {
         try {
             Map<String, Object> vars = new HashMap<>();
-            vars.put("email",dto.getEmail());
-            vars.put("userName",dto.getUserName());
-            vars.put("jobName",dto.getJobName());
+            vars.put("email", dto.getEmail());
+            vars.put("userName", dto.getUserName());
+            vars.put("jobName", dto.getJobName());
             vars.put("amount", dto.getAmount());
-            vars.put("status",dto.getStatus());
-            vars.put("transactionId",dto.getTransactionId());
+            vars.put("status", dto.getStatus());
+            vars.put("transactionId", dto.getTransactionId());
             vars.put("payDate", dto.getPayDate());
-            vars.put("gateway",dto.getGateway());
+            vars.put("gateway", dto.getGateway());
             vars.put("bankCode", dto.getBankCode());
-            vars.put("responseCode",dto.getResponseCode());
-            vars.put("orderInfo",dto.getOrderInfo());
-            vars.put("payType",dto.getPayType());
-            vars.put("orderType",dto.getOrderType());
+            vars.put("responseCode", dto.getResponseCode());
+            vars.put("orderInfo", dto.getOrderInfo());
+            vars.put("payType", dto.getPayType());
+            vars.put("orderType", dto.getOrderType());
 
             emailService.sendPaymentNotification(
                     "Xác Nhận Thanh Toán WebJob",
@@ -258,7 +322,6 @@ public class ApplicationEmailService {
         }
 
 
-
     }
 
     private String formatVietnameseCurrency(double amount) {
@@ -266,6 +329,24 @@ public class ApplicationEmailService {
         return vndFormat.format(amount);
     }
 
+    private String formatSalary(Double salaryMin, Double salaryMax) {
+
+        if (salaryMin == null && salaryMax == null) {
+            return "Không cập nhật";
+        }
+
+        if (salaryMin != null && salaryMax == null) {
+            return formatVietnameseCurrency(salaryMin);
+        }
+
+        if (salaryMin == null) {
+            return formatVietnameseCurrency(salaryMax);
+        }
+
+        return formatVietnameseCurrency(salaryMin)
+                + " - "
+                + formatVietnameseCurrency(salaryMax);
+    }
 
 
 }
